--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -57,7 +57,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/MobileStarterContent/Maps/Minimal_Default
 ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=/Script/StreetBrawler.StreetBrawlerGameMode
+GlobalDefaultGameMode=/Game/Character/MyGame.MyGame_C
 GlobalDefaultServerGameMode=None
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
@@ -65,5 +65,4 @@ TargetedHardwareClass=Mobile
 AppliedTargetedHardwareClass=Mobile
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
-
 
