--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -29,7 +29,7 @@ DoubleClickTime=0.200000
 -ActionMappings=(ActionName="Punch",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="Punch",Key=Gamepad_FaceButton_Left,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="Crouch",Key=S,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
--ActionMappings=(ActionName="Crouch",Key=None,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="Crouch",Key=Gamepad_LeftY,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Jump",Key=SpaceBar,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Jump",Key=Gamepad_FaceButton_Bottom,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Punch",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
@@ -39,7 +39,6 @@ DoubleClickTime=0.200000
 -AxisMappings=(AxisName="MoveRight",Key=A,Scale=-1.000000)
 -AxisMappings=(AxisName="TurnRate",Key=Gamepad_RightX,Scale=1.000000)
 -AxisMappings=(AxisName="Crouch",Key=S,Scale=-1.000000)
--AxisMappings=(AxisName="Crouch",Key=Gamepad_LeftY,Scale=1.000000)
 -AxisMappings=(AxisName="MoveRight",Key=D,Scale=1.000000)
 -AxisMappings=(AxisName="MoveRight",Key=Gamepad_LeftX,Scale=1.000000)
 -AxisMappings=(AxisName="TurnRate",Key=Left,Scale=-1.000000)
@@ -48,8 +47,6 @@ DoubleClickTime=0.200000
 -AxisMappings=(AxisName="LookUp",Key=MouseY,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveRight",Key=A,Scale=-1.000000)
 +AxisMappings=(AxisName="TurnRate",Key=Gamepad_RightX,Scale=1.000000)
-+AxisMappings=(AxisName="Crouch",Key=S,Scale=-1.000000)
-+AxisMappings=(AxisName="Crouch",Key=Gamepad_LeftY,Scale=1.000000)
 +AxisMappings=(AxisName="MoveRight",Key=D,Scale=1.000000)
 +AxisMappings=(AxisName="MoveRight",Key=Gamepad_LeftX,Scale=1.000000)
 +AxisMappings=(AxisName="TurnRate",Key=Left,Scale=-1.000000)
