added more files

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -64,7 +64,7 @@ Primitive=False
 User Created=False
 
 [EditorStartup]
-LastLevel=/Game/StarterContent/Maps/Minimal_Default
+LastLevel=/Game/MobileStarterContent/Maps/Minimal_Default
 
 [AssetEditorManager]
 CleanShutdown=False
@@ -414,7 +414,7 @@ Theme0Color0=(R=55.591526,G=0.965000,B=0.860000,A=1.000000)
 
 [RootWindow]
 ScreenPosition=X=7.000 Y=20.000
-WindowSize=X=870.000 Y=1002.000
+WindowSize=X=880.000 Y=1012.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -839,5 +839,7 @@ BlueprintGraph.TimeStamp=2015.10.30-15.03.44
 BlueprintGraph.LastCompileMethod=Unknown
 SequencerWidgets.TimeStamp=2015.10.30-15.08.10
 SequencerWidgets.LastCompileMethod=Unknown
+StreetBrawler.TimeStamp=2015.11.10-03.24.34
+StreetBrawler.LastCompileMethod=Unknown
 
 
