--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -47,6 +47,12 @@ r.WireframeCullThreshold=5.000000
 UIScaleRule=ShortestSide
 UIScaleCurve=(EditorCurveData=(PreInfinityExtrap=RCCE_Constant,PostInfinityExtrap=RCCE_Constant,Keys=),ExternalCurve=None)
 
+[/Script/HardwareTargeting.HardwareTargetingSettings]
+TargetedHardwareClass=Mobile
+AppliedTargetedHardwareClass=Mobile
+DefaultGraphicsPerformance=Maximum
+AppliedDefaultGraphicsPerformance=Maximum
+
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/MobileStarterContent/Maps/MainLvl
 LocalMapOptions=
@@ -58,10 +64,6 @@ GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/MobileStarterContent/Maps/MainLvl
 ServerDefaultMap=/Game/MobileStarterContent/Maps/MainLvl
 GlobalDefaultGameMode=/Game/Character/MyGame.MyGame_C
-GlobalDefaultServerGameMode=None
+GlobalDefaultServerGameMode=/Game/Character/MyGame.MyGame_C
 
-[/Script/HardwareTargeting.HardwareTargetingSettings]
-TargetedHardwareClass=Mobile
-AppliedTargetedHardwareClass=Mobile
-DefaultGraphicsPerformance=Maximum
-AppliedDefaultGraphicsPerformance=Maximum
+
